--- a/.gitignore
+++ b/.gitignore
@@ -1,74 +1,58 @@
-# -------------------------
-# Python
-# -------------------------
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
-*.pdb
-
-# Virtual environment
-venv/
-.env
-*.env
-
-# Jupyter
-.ipynb_checkpoints/
-*.ipynb_checkpoints
-
-# VSCode / PyCharm
-.vscode/
-.idea/
-
-# OS files
+############################
+# OS / Editor junk
+############################
 .DS_Store
 Thumbs.db
-
-# -------------------------
-# FastF1 Cache
-# -------------------------
-fastf1_cache/
-*/fastf1_cache/
-
-# -------------------------
-# Data
-# -------------------------
-# Large raw FastF1 CSVs/parquet files
-data/
-*.csv
-*.parquet
-*.pkl
-*.feather
-
-# Exported training or prediction data
-datasets/
-exports/
-
-# -------------------------
-# Secrets
-# -------------------------
-secrets.env
-config/secrets.env
-mongodb_key.txt
-*.key
-*.pem
-
-# -------------------------
-# Logs
-# -------------------------
 *.log
-logs/
+*.tmp
 
-# -------------------------
-# Models
-# -------------------------
-saved_models/
-*.h5
-*.pt
-*.onnx
+############################
+# VS Code / IDE
+############################
+.vscode/
+.idea/
+*.iml
 
-# -------------------------
-# Build artifacts
-# -------------------------
-dist/
-build/
+############################
+# Flutter / Dart (frontend)
+############################
+frontend/.dart_tool/
+frontend/build/
+frontend/.flutter-plugins
+frontend/.flutter-plugins-dependencies
+frontend/.metadata
+frontend/pubspec.lock
+frontend/android/.gradle/
+frontend/android/local.properties
+frontend/android/**/build/
+frontend/ios/Pods/
+frontend/ios/.symlinks/
+frontend/ios/Flutter/App.framework
+frontend/ios/Flutter/Flutter.framework
+frontend/ios/Flutter/Generated.xcconfig
+frontend/ios/Flutter/flutter_export_environment.sh
+frontend/macos/Flutter/ephemeral/
+frontend/windows/flutter/ephemeral/
+frontend/linux/flutter/ephemeral/
+
+############################
+# Python / FastAPI (backend)
+############################
+backend/__pycache__/
+backend/*.pyc
+backend/.venv/
+backend/venv/
+backend/env/
+backend/.env
+backend/.pytest_cache/
+backend/.mypy_cache/
+
+############################
+# FastAPI / Uvicorn
+############################
+backend/*.log
+
+############################
+# Caches / temp
+############################
+.cache/
