--- a/backend/data_collection/Dockerfile
+++ b/backend/data_collection/Dockerfile
@@ -11,4 +11,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 
 #run the app
-CMD ["uvicorn", "endpoints:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+CMD ["gunicorn", "endpoints:app", "--workers", "4", "--worker-class", "uvicorn.workers.UvicornWorker", "--bind", "0.0.0.0:8000", "--timeout", "120"]
